--- a/src/Simple_MAKG.ipynb
+++ b/src/Simple_MAKG.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DEMO FOR MAKG"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -109,6 +116,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import networkx as nx\n",
+    "import numpy as np\n",
+    "\n",
+    "# 初始化\n",
+    "knowledge_graph = nx.DiGraph()\n",
+    "# 添加边的方法\n",
+    "knowledge_graph.add_edges_from([(\"n1\", \"n2\"), (\"n2\", \"n3\"), (\"n3\", \"n1\")])  \n",
+    "\n",
+    "\n",
+    "def cosine_similarity(v1, v2):\n",
+    "    \"\"\"\n",
+    "    计算两个向量的余弦相似度\n",
+    "    \"\"\"\n",
+    "    dot_product = np.dot(v1, v2)\n",
+    "    norm_v1 = np.linalg.norm(v1)\n",
+    "    norm_v2 = np.linalg.norm(v2)\n",
+    "    return dot_product / (norm_v1 * norm_v2)\n",
+    "\n",
+    "# 检索二跳邻居节点\n",
+    "def extract_subgraph(key_node):\n",
+    "    \"\"\"\n",
+    "    根据关键节点提取子图（包含关键节点、一跳节点、二跳节点）的函数\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # 相似度最高的节点\n",
+    "    max_similarity_node = key_node\n",
+    "\n",
+    "    # 提取一跳节点\n",
+    "    one_hop_nodes = set()\n",
+    "    for edge in knowledge_graph.edges():\n",
+    "        if max_similarity_node in edge:\n",
+    "            other_node = edge[0] if edge[1] == max_similarity_node else edge[1]\n",
+    "            one_hop_nodes.add(other_node)\n",
+    "\n",
+    "    # 提取二跳节点\n",
+    "    two_hop_nodes = set()\n",
+    "    for one_hop_node in one_hop_nodes:\n",
+    "        adjacent_nodes = set(knowledge_graph.neighbors(one_hop_node))\n",
+    "        adjacent_nodes.discard(max_similarity_node)\n",
+    "        two_hop_nodes.update(adjacent_nodes)\n",
+    "\n",
+    "    # 构建子图（这里将关键节点、一跳节点、二跳节点合并作为子图的节点集合）\n",
+    "    subgraph_nodes = {max_similarity_node} | one_hop_nodes | two_hop_nodes\n",
+    "    subgraph = knowledge_graph.subgraph(subgraph_nodes)\n",
+    "    return subgraph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import faiss\n",
     "import numpy as np\n",
     "import csv\n",
@@ -181,8 +241,9 @@
     "        unique_triplets.update(matching_triplets)\n",
     "\n",
     "    matching_chunks = chunks_df[chunks_df['chunk_id'].isin(unique_chunk_ids)]['text']\n",
+    "    sub_graphs = extract_subgraph(unique_triplets)\n",
     "\n",
-    "    return unique_triplets, matching_chunks"
+    "    return sub_graphs, matching_chunks"
    ]
   },
   {
@@ -277,51 +338,50 @@
     "    return optimized_contexts\n",
     "\n",
     "# 步骤3: 思考，纠正，再次优化\n",
-    "def think_And_reflect(query,contexts,n=3):\n",
-    "    # 利用智能体优化三元组和chunks\n",
-    "    prompt = PromptTemplate(\n",
-    "        input_variables=[\"query, contexts, n\"],\n",
-    "        template=\"\"\"\n",
-    "        你是一个世界级的人工智能系统，能够进行复杂且准确的推理和反思，经过{n}次迭代的thinking和reflection，最终得到[answer]。\n",
-    "        query: {query}\n",
-    "        contexts: {contexts}\n",
-    "        首先在[thinking]标签下进行推理，然后在[reflection]标签反思你的回答，分析可能出现的错误和能够改进的地方，并重复这个过程，反复进行{n}轮的[thinking]和[reflection]。最后，你得到了[answer]。\n",
-    "        请注意，我提供的contexts里面包含三元组Triplets以及context内容，内容可能和query相关，但不一定是直接的答案。所以你需要一一思考，反思，再次优化，最终得到一个优化的答案。\n",
-    "        你的分析过程和最终answer必须来自于contexts，不能捏造和歪曲！\n",
-    "        请一步一步认真思考，最后结果用中文输出。\n",
-    "        你必须按照以下格式输出！\n",
-    "        输出格式如下：\n",
-    "        第一轮迭代:\n",
-    "        [thinking]\n",
-    "        你的推理过程。\n",
-    "        [reflection]\n",
-    "        你的反思过程。\n",
-    "        第二轮迭代:\n",
-    "        [thinking]\n",
-    "        你的推理过程。\n",
-    "        [reflection]\n",
-    "        你的反思过程。\n",
-    "        ......\n",
-    "        [answer]：\n",
-    "        你最终的答案，你只需要回答问题的答案即可，不用添加其他描述，例如“根据上下文”、“根据以上分析”等语句。\n",
-    "        确保要回答到问题中的每个要点，答案不需要分点回答。要表现的像一个标准答案。\n",
-    "        接下来，请一步一步思考，并且必须按照格式输出！回答的最后一定要包含[answer]！\n",
-    "        \"\"\"\n",
-    "    )\n",
-    "    input = {\n",
-    "        \"query\": query,\n",
-    "        \"contexts\": contexts,\n",
-    "        \"n\": n\n",
-    "    }\n",
-    "    chain = LLMChain(llm=llm, prompt=prompt)\n",
-    "    output = chain.run(input)\n",
-    "    print(output)\n",
-    "    # 定义正则表达式模式\n",
-    "    pattern = r'\\[answer\\]\\s*(.*?)\\s*(?=\\[|\\Z)'\n",
+    "goal = 0.85 #设定一个评分阈值，如果子问题答案评分小于这个阈值，则继续迭代评估\n",
+    "def evaluate_answers(sub_questions, total_answer, reflect = \"\") -> str:\n",
+    "    \"\"\"\n",
+    "    根据子问题和总问题答案评估子问题答案评分，并计算综合得分的函数\n",
+    "    \"\"\"\n",
+    "    scores = []\n",
+    "    weights = []\n",
+    "    eval = \"\"\n",
+    "    for sub_q_info in sub_questions:\n",
+    "        sub_question = sub_q_info[\"question\"]\n",
+    "        weight = sub_q_info[\"weight\"]\n",
+    "        # 构造提示语，让LLM去评估子问题答案与总答案的匹配度等情况给出评分（这里评分范围假设是0到1），实际上可以提供适当的例子和提示，让LLM更好地理解评分的意义\n",
+    "        prompt = f\"请根据总问题的答案：{total_answer}，评估子问题 '{sub_question}' 的答案符合程度，并给出一个0到1之间的评分，越符合评分越高。并且请放回你的的评价。\"\n",
+    "        chain = LLMChain(llm=llm)\n",
+    "        response = chain.run(prompt)\n",
+    "        # 从LLM回复中提取评分，这里假设回复格式是比较规范的，包含了评分数字，实际可能需要更严谨的解析处理\n",
+    "        score_text = response.choices[0].text.strip()\n",
+    "        try:\n",
+    "            score = float(score_text)\n",
+    "            scores.append(score)\n",
+    "            weights.append(weight)\n",
+    "            eval = response.choices[1].text.strip()\n",
+    "        except ValueError:\n",
+    "            print(f\"无法从回复中解析出子问题 '{sub_question}' 的有效评分，回复内容为: {score_text}\")\n",
+    "            scores.append(0)\n",
+    "            weights.append(weight)\n",
     "\n",
-    "    match = re.search(pattern, output, re.DOTALL)\n",
-    "    \n",
-    "    return match"
+    "    # 根据权重计算综合得分\n",
+    "    total_score = sum(s * w for s, w in zip(scores, weights))\n",
+    "    return total_score, eval\n",
+    "\n",
+    "\n",
+    "def iterative_evaluation(sub_questions, total_answer, goal=0.9):\n",
+    "    \"\"\"\n",
+    "    迭代评估子问题答案的主函数，如果得分小于指定目标值（默认为0.9）就继续迭代评估\n",
+    "    \"\"\"\n",
+    "    score, eval = evaluate_answers(sub_questions, total_answer)\n",
+    "    iteration_count = 0\n",
+    "    while score < goal:\n",
+    "        print(f\"当前得分: {score}，小于{goal}，开始第 {iteration_count + 1} 次迭代评估...\")\n",
+    "        score = evaluate_answers(sub_questions, total_answer, eval)\n",
+    "        iteration_count += 1\n",
+    "    print(f\"最终得分: {score}，满足要求，结束评估。\")\n",
+    "    return score"
    ]
   },
   {
@@ -330,35 +390,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def answer(query,context):\n",
-    "    prompt = PromptTemplate(\n",
-    "    input_variables=[\"query, contexts\"],\n",
-    "    template=\"\"\"\n",
-    "    你是一个智能体助手，我给你一个query和一些相关的上下文contexts,由于上下文过长，你需要从中提炼出对于解答query相关的，直接的，有用的信息。\n",
-    "    query: {query}\n",
-    "    contexts: {contexts}\n",
-    "    首先你需要对query进行分析，明确query的意图，以及分析出解答query所需要的可能的信息。\n",
-    "    然后需要对contexts进行分析，提炼出所有有用的信息，最终输出一个优化的上下文，用来解答query。输出的结果需要包含三元组和context，确保这些三元组和context是与query相关的。\n",
-    "    你需要输出三元组及其对三元组的解释，以及context。\n",
-    "    你只需要提炼出与query相关的信息！！！尽量保持原文信息一致性，不用描述和概括。\n",
-    "    不允许出现英文回答，只能包含英文。\n",
-    "    你的输出必须符合下述格式！不允许输出别的内容。\n",
-    "    请一句一句分析，不能跳过任何一句，一步一步思考。\n",
-    "    输出格式如下：\n",
-    "    Triplets:\n",
-    "    (node1,relation,node2)，后面是对形成三元组和解答query有用的信息的解释。\n",
-    "    Context: \n",
-    "    优化提炼之后的上下文。\n",
-    "    请开始提炼:\n",
-    "    \"\"\"\n",
-    "    )\n",
-    "    input = {\n",
-    "        'query': query,\n",
-    "        'contexts': context\n",
-    "    }\n",
-    "    chain = LLMChain(llm=llm, prompt=prompt)\n",
-    "    output = chain.run(input)\n",
-    "    print(output)"
+    "# def answer(query,context):\n",
+    "#     prompt = PromptTemplate(\n",
+    "#     input_variables=[\"query, contexts\"],\n",
+    "#     template=\"\"\"\n",
+    "#     你是一个智能体助手，我给你一个query和一些相关的上下文contexts,由于上下文过长，你需要从中提炼出对于解答query相关的，直接的，有用的信息。\n",
+    "#     query: {query}\n",
+    "#     contexts: {contexts}\n",
+    "#     首先你需要对query进行分析，明确query的意图，以及分析出解答query所需要的可能的信息。\n",
+    "#     然后需要对contexts进行分析，提炼出所有有用的信息，最终输出一个优化的上下文，用来解答query。输出的结果需要包含三元组和context，确保这些三元组和context是与query相关的。\n",
+    "#     你需要输出三元组及其对三元组的解释，以及context。\n",
+    "#     你只需要提炼出与query相关的信息！！！尽量保持原文信息一致性，不用描述和概括。\n",
+    "#     不允许出现英文回答，只能包含英文。\n",
+    "#     你的输出必须符合下述格式！不允许输出别的内容。\n",
+    "#     请一句一句分析，不能跳过任何一句，一步一步思考。\n",
+    "#     输出格式如下：\n",
+    "#     Triplets:\n",
+    "#     (node1,relation,node2)，后面是对形成三元组和解答query有用的信息的解释。\n",
+    "#     Context: \n",
+    "#     优化提炼之后的上下文。\n",
+    "#     请开始提炼:\n",
+    "#     \"\"\"\n",
+    "#     )\n",
+    "#     input = {\n",
+    "#         'query': query,\n",
+    "#         'contexts': context\n",
+    "#     }\n",
+    "#     chain = LLMChain(llm=llm, prompt=prompt)\n",
+    "#     output = chain.run(input)\n",
+    "#     print(output)"
    ]
   },
   {
@@ -433,6 +493,7 @@
     "    prompt = prompt_template.format(context=final_context, question=q)\n",
     "    model = llm \n",
     "    response_text = model.predict(prompt)\n",
+    "    iterative_evaluation(sub_questions=sub_q, total_answer=response_text, goal=goal)\n",
     "    end_time = time.time()  # 记录结束时间\n",
     "    elapsed_time = end_time - start_time  # 计算单次查询的时间\n",
     "    total_time += elapsed_time\n",
@@ -507,7 +568,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "KGQA",
    "language": "python",
    "name": "python3"
   },
@@ -521,7 +582,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
